# WikibaseMigrator

./: .dockerignore  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  python-app.yml  python-publish.yml
docs/: migration_profile_config.md
src/wikibasemigrator/: __init__.py  cli.py  config.py  exceptions.py  mapper.py  merger.py  migrator.py  oauth.py  qsgenerator.py  wikibase.py
src/wikibasemigrator/model/: datatypes.py  migration_mark.py  profile.py  quickstatements.py  translations.py
src/wikibasemigrator/profiles/: FactGrid.yaml  WikibaseMigrationTest.yaml  base_template.yaml  test.yaml
src/wikibasemigrator/util/: RateLimiter.py
src/wikibasemigrator/web/: config_page.py  docker_main.py  item_selectors.py  main.py  migration_view.py  oauth.py  selection_view.py  translation_view.py  webpage.py  webserver.py  wikibase_controller_page.py
src/wikibasemigrator/web/components/: code.py  log_handler.py  progress.py  wikibase_item.js  wikibase_item.py
tests/: test_cli.py  test_mapper.py  test_merger.py  test_migrator.py  test_quickstatements.py  test_wikibase.py
tests/model/: test_profile.py
tests/resources/merger/: Q447922_reduced.json  Q80_expected.json  Q80_source.json  Q80_target.json
tests/resources/migrator/: Q23693.json  Q80.json  unit_ids.json
tests/web/components/: demo_wikibase_item.py
